--- a/ui/index.html
+++ b/ui/index.html
@@ -150,8 +150,8 @@ document.body.appendChild(el);
           <option value="RPI4">Raspberry Pi (any Linux)</option>
           <option value="RPI_Pico">Raspberry Pi Pico</option> -->
           <!-- <option value="MKR_Pi">Maker Pi RP2040</option> -->
-          <option value="WS_zero" >Xiao RP2040</option>
-          <option value="Xiao_RP2040" >Waveshare RP2040-Zero</option>
+          <!-- <option value="Xiao_RP2040" >Xiao RP2040</option> -->
+          <option value="WS_zero" >RP2040-Zero</option>
           <!-- <option value="UNO">Arduino UNO or MEGA (Snek)</option>
           <option value="EV3">Lego EV3</option> -->
         </select>
