--- a/example.html
+++ b/example.html
@@ -17,6 +17,7 @@
   <li><a href="./example/3色の移動.xml" download="3色の移動.xml">3色の移動</a></li>
   <li><a href="./example/全体の色がゆっくり変化.xml" download="全体の色がゆっくり変化.xml">全体の色がゆっくり変化</a></li>
   <li><a href="./example/色がゆっくり変化して移動.xml" download="色がゆっくり変化して移動.xml">色がゆっくり変化して移動</a></li>
+  <li><a href="./example/上から下につみかさなる.xml" download="上から下につみかさなる.xml">上から下につみかさなる</a></li>
 </ul>
 
 </body>
